--- a/styling.css
+++ b/styling.css
@@ -59,6 +59,7 @@ html, body {
 .main-footer {
     text-align: center;
 }
-.nav-bottom {
+.nav-bottom li {
     text-align: center;
+    padding: 0 5%;
 }
